; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seafile_to_data.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seafile_to_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@.str = private unnamed_addr constant [36 x i8] c"Failed to compress file object %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_5__*, i32*)* @seafile_to_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @seafile_to_data(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %36

13:                                               ; preds = %2
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = call i32* @seafile_to_json(%struct.TYPE_5__* %14, i32* %7)
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i32* null, i32** %3, align 8
  br label %40

19:                                               ; preds = %13
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = call i64 @seaf_compress(i32* %20, i32 %21, i32** %8, i32* %22)
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %19
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @seaf_warning(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @g_free(i32* %30)
  store i32* null, i32** %3, align 8
  br label %40

32:                                               ; preds = %19
  %33 = load i32*, i32** %6, align 8
  %34 = call i32 @g_free(i32* %33)
  %35 = load i32*, i32** %8, align 8
  store i32* %35, i32** %3, align 8
  br label %40

36:                                               ; preds = %2
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = call i32* @seafile_to_v0_data(%struct.TYPE_5__* %37, i32* %38)
  store i32* %39, i32** %3, align 8
  br label %40

40:                                               ; preds = %36, %32, %25, %18
  %41 = load i32*, i32** %3, align 8
  ret i32* %41
}

declare dso_local i32* @seafile_to_json(%struct.TYPE_5__*, i32*) #1

declare dso_local i64 @seaf_compress(i32*, i32, i32**, i32*) #1

declare dso_local i32 @seaf_warning(i8*, i32) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i32* @seafile_to_v0_data(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
